// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput advanced search 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item pf-m-fill"
      >
        <div
          class="pf-v6-c-text-input-group"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="m18.8 17.21-4.41-4.41A7.906 7.906 0 0 0 16 8c0-4.41-3.59-8-8-8S0 3.59 0 8s3.59 8 8 8c1.73 0 3.42-.57 4.8-1.61l4.41 4.41c.44.44 1.15.44 1.59 0 .44-.44.44-1.15 0-1.59ZM8 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6Z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                type="text"
                value="username:player firstname:john"
              />
            </span>
          </div>
          <div
            class="pf-v6-c-text-input-group__utilities"
          >
            <button
              aria-label="Reset"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-input-group__item pf-m-plain"
      >
        <button
          aria-expanded="false"
          aria-label="Open advanced search"
          class="pf-v6-c-button pf-m-control"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Search"
          class="pf-v6-c-button pf-m-control"
          type="submit"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-icon"
            >
              <span
                class="pf-v6-c-icon__content pf-v6-m-mirror-inline-rtl"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput advanced search with custom attributes 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="test-id"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item pf-m-fill"
      >
        <div
          class="pf-v6-c-text-input-group"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="m18.8 17.21-4.41-4.41A7.906 7.906 0 0 0 16 8c0-4.41-3.59-8-8-8S0 3.59 0 8s3.59 8 8 8c1.73 0 3.42-.57 4.8-1.61l4.41 4.41c.44.44 1.15.44 1.59 0 .44-.44.44-1.15 0-1.59ZM8 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6Z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                type="text"
                value="username:player firstname:john"
              />
            </span>
          </div>
          <div
            class="pf-v6-c-text-input-group__utilities"
          >
            <button
              aria-label="Reset"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-input-group__item pf-m-plain"
      >
        <button
          aria-expanded="true"
          aria-label="Open advanced search"
          class="pf-v6-c-button pf-m-control pf-m-expanded"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Search"
          class="pf-v6-c-button pf-m-control"
          type="submit"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-icon"
            >
              <span
                class="pf-v6-c-icon__content pf-v6-m-mirror-inline-rtl"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class=""
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 1; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="pf-v6-c-panel pf-m-raised"
      >
        <div
          class="pf-v6-c-panel__main"
        >
          <div
            class="pf-v6-c-panel__main-body"
          >
            <form
              class="pf-v6-c-form"
              novalidate=""
            >
              <div
                class="pf-v6-c-form__group"
              >
                <div
                  class="pf-v6-c-form__group-label"
                >
                  <label
                    class="pf-v6-c-form__label"
                    for="username_0"
                  >
                    <span
                      class="pf-v6-c-form__label-text"
                    >
                      Username
                    </span>
                  </label>
                    
                </div>
                <div
                  class="pf-v6-c-form__group-control"
                >
                  <span
                    class="pf-v6-c-form-control"
                  >
                    <input
                      aria-invalid="false"
                      id="username_0"
                      type="text"
                      value="player"
                    />
                  </span>
                </div>
              </div>
              <div
                class="pf-v6-c-form__group"
              >
                <div
                  class="pf-v6-c-form__group-label"
                >
                  <label
                    class="pf-v6-c-form__label"
                    for="firstname_1"
                  >
                    <span
                      class="pf-v6-c-form__label-text"
                    >
                      First name
                    </span>
                  </label>
                    
                </div>
                <div
                  class="pf-v6-c-form__group-control"
                >
                  <span
                    class="pf-v6-c-form-control"
                  >
                    <input
                      aria-invalid="false"
                      id="firstname_1"
                      type="text"
                      value="john"
                    />
                  </span>
                </div>
              </div>
              <div
                class="pf-v6-c-form__group"
              >
                <div
                  class="pf-v6-c-form__group-label"
                >
                  <label
                    class="pf-v6-c-form__label"
                    for="pf-:r0:"
                  >
                    <span
                      class="pf-v6-c-form__label-text"
                    >
                      Has words
                    </span>
                  </label>
                    
                </div>
                <div
                  class="pf-v6-c-form__group-control"
                >
                  <span
                    class="pf-v6-c-form-control"
                  >
                    <input
                      aria-invalid="false"
                      id="pf-:r0:"
                      type="text"
                      value=""
                    />
                  </span>
                </div>
              </div>
              <div
                class="pf-v6-c-form__group"
              >
                <div
                  class="pf-v6-c-form__group-control"
                >
                  <button
                    class="pf-v6-c-button pf-m-link pf-m-inline"
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      Link
                    </span>
                    <span
                      class="pf-v6-c-button__icon pf-m-end"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 32 32"
                        width="1em"
                      >
                        <path
                          d="M28.5 2h-25C2.673 2 2 2.673 2 3.5v25c0 .827.673 1.5 1.5 1.5h25c.827 0 1.5-.673 1.5-1.5v-25c0-.827-.673-1.5-1.5-1.5Zm-3.375 17a1.125 1.125 0 0 1-2.25 0v-8.284L11.796 21.795a1.122 1.122 0 0 1-1.592 0 1.127 1.127 0 0 1 0-1.591l11.08-11.08H13a1.125 1.125 0 0 1 0-2.25h10.5c.896 0 1.625.729 1.625 1.625v10.5Z"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="pf-v6-c-form__group pf-m-action"
              >
                <div
                  class="pf-v6-c-form__group-control"
                >
                  <div
                    class="pf-v6-c-form__actions"
                  >
                    <button
                      class="pf-v6-c-button pf-m-primary"
                      type="submit"
                    >
                      <span
                        class="pf-v6-c-button__text"
                      >
                        Search
                      </span>
                    </button>
                    <button
                      class="pf-v6-c-button pf-m-link"
                      type="reset"
                    >
                      <span
                        class="pf-v6-c-button__text"
                      >
                        Reset
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput renders search input in strict mode 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item pf-m-fill"
      >
        <div
          class="pf-v6-c-text-input-group"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="m18.8 17.21-4.41-4.41A7.906 7.906 0 0 0 16 8c0-4.41-3.59-8-8-8S0 3.59 0 8s3.59 8 8 8c1.73 0 3.42-.57 4.8-1.61l4.41 4.41c.44.44 1.15.44 1.59 0 .44-.44.44-1.15 0-1.59ZM8 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6Z"
                  />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                type="text"
                value="username:player firstname:john"
              />
            </span>
          </div>
          <div
            class="pf-v6-c-text-input-group__utilities"
          >
            <button
              aria-label="Reset"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-input-group__item pf-m-plain"
      >
        <button
          aria-expanded="false"
          aria-label="Open advanced search"
          class="pf-v6-c-button pf-m-control"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Search"
          class="pf-v6-c-button pf-m-control"
          type="submit"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-icon"
            >
              <span
                class="pf-v6-c-icon__content pf-v6-m-mirror-inline-rtl"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                  />
                </svg>
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput search input with hint 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-input-group"
  >
    <div
      class="pf-v6-c-input-group__item pf-m-fill"
    >
      <div
        class="pf-v6-c-text-input-group"
      >
        <div
          class="pf-v6-c-text-input-group__main pf-m-icon"
        >
          <span
            class="pf-v6-c-text-input-group__text"
          >
            <input
              aria-hidden="true"
              class="pf-v6-c-text-input-group__text-input pf-m-hint"
              disabled=""
              type="text"
              value="test hint"
            />
            <span
              class="pf-v6-c-text-input-group__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="m18.8 17.21-4.41-4.41A7.906 7.906 0 0 0 16 8c0-4.41-3.59-8-8-8S0 3.59 0 8s3.59 8 8 8c1.73 0 3.42-.57 4.8-1.61l4.41 4.41c.44.44 1.15.44 1.59 0 .44-.44.44-1.15 0-1.59ZM8 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6Z"
                />
              </svg>
            </span>
            <input
              aria-label="simple text input"
              class="pf-v6-c-text-input-group__text-input"
              type="text"
              value="test input"
            />
          </span>
        </div>
        <div
          class="pf-v6-c-text-input-group__utilities"
        >
          <div
            class="pf-v6-c-text-input-group__group"
          >
            <button
              aria-label="Previous"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 320 512"
                  >
                    <path
                      d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="M29 22a.997.997 0 0 1-.707-.293L16 9.414 3.707 21.707a.999.999 0 1 1-1.414-1.414L14.939 7.646a1.501 1.501 0 0 1 2.121 0l12.646 12.646a.999.999 0 0 1-.707 1.707Z"
                    />
                  </svg>
                </svg>
              </span>
            </button>
            <button
              aria-label="Next"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <button
            aria-label="Reset"
            class="pf-v6-c-button pf-m-plain"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-input-group__item"
    >
      <button
        aria-label="Search"
        class="pf-v6-c-button pf-m-control"
        type="submit"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-icon"
          >
            <span
              class="pf-v6-c-icon__content pf-v6-m-mirror-inline-rtl"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput simple search input 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-input-group"
  >
    <div
      class="pf-v6-c-input-group__item pf-m-fill"
    >
      <div
        class="pf-v6-c-text-input-group"
      >
        <div
          class="pf-v6-c-text-input-group__main pf-m-icon"
        >
          <span
            class="pf-v6-c-text-input-group__text"
          >
            <span
              class="pf-v6-c-text-input-group__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="m18.8 17.21-4.41-4.41A7.906 7.906 0 0 0 16 8c0-4.41-3.59-8-8-8S0 3.59 0 8s3.59 8 8 8c1.73 0 3.42-.57 4.8-1.61l4.41 4.41c.44.44 1.15.44 1.59 0 .44-.44.44-1.15 0-1.59ZM8 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6Z"
                />
              </svg>
            </span>
            <input
              aria-label="simple text input"
              class="pf-v6-c-text-input-group__text-input"
              type="text"
              value="test input"
            />
          </span>
        </div>
        <div
          class="pf-v6-c-text-input-group__utilities"
        >
          <div
            class="pf-v6-c-text-input-group__group"
          >
            <button
              aria-label="Previous"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 320 512"
                  >
                    <path
                      d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="M29 22a.997.997 0 0 1-.707-.293L16 9.414 3.707 21.707a.999.999 0 1 1-1.414-1.414L14.939 7.646a1.501 1.501 0 0 1 2.121 0l12.646 12.646a.999.999 0 0 1-.707 1.707Z"
                    />
                  </svg>
                </svg>
              </span>
            </button>
            <button
              aria-label="Next"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <button
            aria-label="Reset"
            class="pf-v6-c-button pf-m-plain"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-input-group__item"
    >
      <button
        aria-label="Search"
        class="pf-v6-c-button pf-m-control"
        type="submit"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-icon"
          >
            <span
              class="pf-v6-c-icon__content pf-v6-m-mirror-inline-rtl"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M14.35 8.94 6.71 1.29l-.02-.02c-.4-.38-1.03-.37-1.41.02-.38.4-.37 1.03.02 1.41l7.29 7.29-7.29 7.29a1.003 1.003 0 0 0 1.42 1.42l7.65-7.65c.59-.59.59-1.54 0-2.12Z"
                />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
